--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fancyapps/ui": "^5.0.7",
     "browser-sync": "^2.28.3",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
