--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "rateyo": "^2.3.2",
     "sass": "^1.58.3",
     "slick-carousel": "^1.8.1"
+  },
+  "devDependencies": {
+    "ion-rangeslider": "^2.3.1",
+    "jquery-form-styler": "^2.0.2"
   }
 }
