--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.6.3",
@@ -24,6 +25,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "gulp-nunjucks-render": "^2.2.3",
     "ion-rangeslider": "^2.3.1",
     "jquery-form-styler": "^2.0.2"
   }
